# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py
bot/handlers/commands/: __init__.py  commands.py
bot/services/: intent_router.py  lms_client.py
